--- a/src/app/components/policy-guide/docs/compliance/compliance-dashboard/compliance-dashboard.template.html
+++ b/src/app/components/policy-guide/docs/compliance/compliance-dashboard/compliance-dashboard.template.html
@@ -36,13 +36,18 @@
                 <span *ngIf="requirement.status=='noncompliant'">Agency policy has not been reviewed for consistency with the Source Code Policy</span>
             </div>
           </div>
-          <div *ngIf="requirement.text=='schemaFormat'">
+          <div *ngIf="requirement.text=='codeInventoried'">
             <div class="requirement {{requirement.status}} ">
-                <span *ngIf="requirement.status=='compliant'">
-                  Code inventory has been published.
-                </span>
-                <span *ngIf="requirement.status=='partial'">Code inventory has been published but has technical errors.</span>
-                <span *ngIf="requirement.status=='noncompliant'">Code inventory has not been published.</span>
+                <span *ngIf="requirement.status=='compliant'">Agency has inventoried 100% of their code</span>
+                <span *ngIf="requirement.status=='partial'">Agency has inventoried greater than 50% of their code</span>
+                <span *ngIf="requirement.status=='noncompliant'">Agency has inventoried less than 50% of their code</span>
+            </div>
+          </div>
+          <div *ngIf="requirement.text=='metOpenSourceRequirement'">
+            <div class="requirement {{requirement.status}} ">
+                <span *ngIf="requirement.status=='compliant'">Agency has open sourced greater than 20% of their custom developed code</span>
+                <span *ngIf="requirement.status=='partial'">Agency has open sourced greater than 10% of their custom developed code</span>
+                <span *ngIf="requirement.status=='noncompliant'">Agency has open sourced less than 10% of their custom developed code</span>
             </div>
           </div>
         </div>
