--- a/src/styles/base/_all.scss
+++ b/src/styles/base/_all.scss
@@ -2,6 +2,9 @@
 @import '~bourbon-neat/core/neat';
 @import '~hamburgers/_sass/hamburgers/hamburgers';
 
+@import '~font-awesome/scss/font-awesome';
+@import '~uswds/src/stylesheets/all';
+
 @import 'variables';
 @import 'grid-settings';
 
