--- a/src/app/components/home/home.style.scss
+++ b/src/app/components/home/home.style.scss
@@ -1,4 +1,8 @@
-@import '../../../styles/base/all';
+@import '~bourbon/app/assets/stylesheets/addons/font-stacks';
+@import '~bourbon/app/assets/stylesheets/addons/clearfix';
+@import '../../../styles/base/grid-settings';
+@import '../../../styles/base/variables';
+@import '~uswds/src/stylesheets/core/variables';
 
 body {
   background-color: $color-white;
@@ -185,7 +189,7 @@ body {
 .banner-background {
   animation: 15s linear zoomOutOnBackground;
   background-attachment: scroll;
-  background-image: url('assets/img/american_flag_1920x1280_gradient.jpg');
+  background-image: url('../../../assets/img/american_flag_1920x1280_gradient.jpg');
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -279,7 +283,7 @@ body {
 
   .usa-grid {
     @media screen and (min-width: $medium-screen) {
-      background: url('assets/img/featured-projects/typing.png');
+      background: url('../../../assets/img/featured-projects/typing.png');
       background-position: 0% 100%;
       background-repeat: no-repeat;
       background-size: 34rem;
@@ -315,7 +319,7 @@ body {
 
   .usa-grid {
     @media screen and (min-width: $medium-screen) {
-      background: url('assets/img/featured-projects/construction_worker.png');
+      background: url('../../../assets/img/featured-projects/construction_worker.png');
       background-position: 103% 100%;
       background-repeat: no-repeat;
       background-size: 34rem;
@@ -358,8 +362,8 @@ body {
   color: $color-white;
 
   @media screen and (min-width: $medium-screen) {
-    background: url('assets/img/featured-projects/grass.png'), #3f7fab;
-    background: url('assets/img/featured-projects/grass.png'), linear-gradient(215deg, #3f7fab, #6db5f1);
+    background: url('../../../assets/img/featured-projects/grass.png'), #3f7fab;
+    background: url('../../../assets/img/featured-projects/grass.png'), linear-gradient(215deg, #3f7fab, #6db5f1);
     background-position: 0% 100%;
     background-repeat: no-repeat;
     background-size: cover, contain;
@@ -386,7 +390,7 @@ body {
 
   .usa-grid {
     @media screen and (min-width: $medium-screen) {
-      background: url('assets/img/featured-projects/house_for_sale.png');
+      background: url('../../../assets/img/featured-projects/house_for_sale.png');
       background-position: 0% 100%;
       background-repeat: no-repeat;
       background-size: 50%;
@@ -451,7 +455,7 @@ body {
 
 .press {
   background-attachment: scroll;
-  background-image: url('assets/img/american_flag_1920x1280_gradient.png');
+  background-image: url('../../../assets/img/american_flag_1920x1280_gradient.jpg');
   background-position: top center;
   background-repeat: no-repeat;
   background-size: cover;
