--- a/src/styles/base/_documentation.scss
+++ b/src/styles/base/_documentation.scss
@@ -1,4 +1,9 @@
-@import 'all';
+@import 'grid-settings';
+@import 'variables';
+@import '~bourbon/app/assets/stylesheets/addons/clearfix';
+@import '~bourbon-neat/core/neat/settings/settings';
+@import '~bourbon-neat/core/neat/mixins/grid-column';
+@import '~uswds/src/stylesheets/core/variables';
 
 .docs-content {
   background-color: $color-white;
