More work on improving load times.

--- a/src/app/components/explore-code/agencies/agencies.style.scss
+++ b/src/app/components/explore-code/agencies/agencies.style.scss
@@ -1,7 +1,7 @@
 @import '../../../../styles/base/variables';
 @import '../../../../styles/base/grid-settings';
-@import '~bourbon-neat/core/neat/settings/settings';
-@import '~bourbon-neat/core/neat/mixins/grid-column';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 
 .agencies-content {
   background-color: $color-white;
