--- a/src/app/components/home/home.style.scss
+++ b/src/app/components/home/home.style.scss
@@ -1,5 +1,5 @@
-@import '~bourbon/app/assets/stylesheets/addons/font-stacks';
-@import '~bourbon/app/assets/stylesheets/addons/clearfix';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 @import '../../../styles/base/grid-settings';
 @import '../../../styles/base/variables';
 @import '~uswds/src/stylesheets/core/variables';
