--- a/src/app/components/explore-code/activity-list/activity-list.style.scss
+++ b/src/app/components/explore-code/activity-list/activity-list.style.scss
@@ -1,7 +1,6 @@
 @import '../../../../styles/base/variables';
-@import '~bourbon/app/assets/stylesheets/addons/clearfix';
-@import '~bourbon-neat/core/neat/settings/settings';
-@import '~bourbon-neat/core/neat/mixins/grid-column';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .activity {
