--- a/src/app/components/repos-search/repos-search.style.scss
+++ b/src/app/components/repos-search/repos-search.style.scss
@@ -1,8 +1,6 @@
-@import '~bourbon/app/assets/stylesheets/addons/font-stacks';
-@import '~bourbon/app/assets/stylesheets/addons/clearfix';
 @import '../../../styles/base/variables';
-@import '~bourbon-neat/core/neat/settings/settings';
-@import '~bourbon-neat/core/neat/mixins/grid-column';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .browse {
