--- a/src/app/components/search-results/search-results.styles.scss
+++ b/src/app/components/search-results/search-results.styles.scss
@@ -1,6 +1,5 @@
-@import '~bourbon/app/assets/stylesheets/addons/font-stacks';
-@import '~bourbon-neat/core/neat/settings/settings';
-@import '~bourbon-neat/core/neat/mixins/grid-column';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .search-col {
