--- a/src/app/components/tools/tools.style.scss
+++ b/src/app/components/tools/tools.style.scss
@@ -1,7 +1,6 @@
-@import '~bourbon/app/assets/stylesheets/addons/font-stacks';
+@import '~bourbon/app/assets/stylesheets/bourbon';
+@import '~bourbon-neat/core/neat';
 @import '../../../styles/base/grid-settings';
-@import '~bourbon-neat/core/neat/settings/settings';
-@import '~bourbon-neat/core/neat/mixins/grid-column';
 @import '~uswds/src/stylesheets/core/variables';
 
 .tool {
