More work on improving the build.

--- a/src/app/components/explore-code/activity-list/activity-list.style.scss
+++ b/src/app/components/explore-code/activity-list/activity-list.style.scss
@@ -1,6 +1,6 @@
 @import '../../../../styles/base/variables';
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .activity {
@@ -68,7 +68,7 @@
     @include clearfix;
 
     div {
-      @include grid-column(6);
+      @include span-columns(6);
     }
 
     h3 {
