--- a/src/app/components/explore-code/agencies/agencies.style.scss
+++ b/src/app/components/explore-code/agencies/agencies.style.scss
@@ -1,14 +1,14 @@
 @import '../../../../styles/base/variables';
 @import '../../../../styles/base/grid-settings';
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 
 .agencies-content {
   background-color: $color-white;
   padding: 2.5em 1.5em;
 
   @media screen and (min-width: $medium-screen) {
-    @include grid-column(9);
+    @include span-columns(9);
   }
 
   @media screen and (min-width: $extra-large-screen) {
