--- a/src/app/components/repos-search/repos-search.style.scss
+++ b/src/app/components/repos-search/repos-search.style.scss
@@ -1,10 +1,10 @@
 @import '../../../styles/base/variables';
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .browse {
-  @include grid-column(12);
+  @include span-columns(12);
   margin-top: 0.7rem;
 
   @media screen and (min-width: $small-screen) {
@@ -22,7 +22,7 @@
 }
 
 .search-with-icon-button {
-  @include grid-column(3);
+  @include span-columns(3);
   font-size: 0.8em;
   margin: 0;
   margin-left: 10px;
@@ -94,17 +94,17 @@ label {
 }
 
 .search-input-container {
-  @include grid-column(9);
+  @include span-columns(9);
   width: calc(75% - 25px);
 
   @media screen and (min-width: $small-screen) {
-    @include grid-column(12);
+    @include span-columns(12);
   }
 }
 
 .search-results-content {
   .search-input-container {
-    @include grid-column(9);
+    @include span-columns(9);
     margin-left: 0;
   }
 
