--- a/src/app/components/search-results/search-results.styles.scss
+++ b/src/app/components/search-results/search-results.styles.scss
@@ -1,10 +1,10 @@
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .search-col {
   @media screen and (min-width: $medium-screen) {
-    @include grid-column(9);
+    @include span-columns(9);
   }
 }
 
