--- a/src/app/components/sidebar/sidebar.style.scss
+++ b/src/app/components/sidebar/sidebar.style.scss
@@ -1,5 +1,5 @@
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .menu-icon {
@@ -153,7 +153,7 @@
   position: relative;
 
   @media screen and (min-width: $medium-screen) {
-    @include grid-column(3);
+    @include span-columns(3);
   }
 
   &.active {
