--- a/src/app/components/tools/tools.style.scss
+++ b/src/app/components/tools/tools.style.scss
@@ -1,5 +1,5 @@
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '../../../styles/base/grid-settings';
 @import '~uswds/src/stylesheets/core/variables';
 
@@ -7,7 +7,7 @@
   padding: 2.5em 1.5em;
 
   @media screen and (min-width: $medium-screen) {
-    @include grid-column(9);
+    @include span-columns(9);
   }
 
   @media screen and (min-width: $extra-large-screen) {
