--- a/src/styles/base/_documentation.scss
+++ b/src/styles/base/_documentation.scss
@@ -1,7 +1,7 @@
 @import 'grid-settings';
 @import 'variables';
 @import '~bourbon/app/assets/stylesheets/bourbon';
-@import '~bourbon-neat/core/neat';
+@import '~bourbon-neat/app/assets/stylesheets/neat';
 @import '~uswds/src/stylesheets/core/variables';
 
 .docs-content {
@@ -9,7 +9,7 @@
   padding: 1em 1em 2em;
 
   @media screen and (min-width: $medium-screen) {
-    @include grid-column(9);
+    @include span-columns(9);
     padding: 2em 2em 3em;
   }
 
@@ -154,7 +154,7 @@ li.dashboard-agency {
     @include clearfix;
 
     div {
-      @include grid-column(6);
+      @include span-columns(6);
     }
 
     h3 {
