--- a/src/styles/base/_all.scss
+++ b/src/styles/base/_all.scss
@@ -3,6 +3,8 @@
 @import '~hamburgers/_sass/hamburgers/hamburgers';
 
 @import '~font-awesome/scss/font-awesome';
+@import '~devicons/css/devicons.scss';
+
 @import '~normalize.css';
 @import '~uswds/src/stylesheets/core/variables';
 @import '~uswds/src/stylesheets/core/utilities';
