--- a/src/app/components/repo-list/repo-list.styles.scss
+++ b/src/app/components/repo-list/repo-list.styles.scss
@@ -14,3 +14,10 @@
     margin-bottom: 120px;
   }
 }
+
+.repo-list-summary {
+  font-size: 0.8em;
+  line-height: 22px;
+  margin-bottom: 1rem;
+  margin-top: 0;
+}
