--- a/src/app/components/repo-list/repo-list.styles.scss
+++ b/src/app/components/repo-list/repo-list.styles.scss
@@ -1,3 +1,5 @@
+@import '../../../styles/base/variables';
+
 .repos-container,
 .no-repos {
   margin-top: 2rem;
@@ -16,8 +18,54 @@
 }
 
 .repo-list-summary {
+  display: inline-block;
   font-size: 0.8em;
   line-height: 22px;
   margin-bottom: 1rem;
   margin-top: 0;
+}
+
+.repo-list::ng-deep .ngx-pagination {
+  float: right;
+  font-size: 0.8em;
+  font-weight: bold;
+  margin: 0;
+  user-select: none;
+
+  li {
+    display: inline-block;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+
+    &.disabled {
+      span {
+        color: $color-gray-light;
+      }
+    }
+
+    a,
+    span {
+      padding-left: 1rem;
+      padding-right: 1rem;
+    }
+
+    a {
+      color: $color-gray-dark;
+      cursor: pointer;
+      text-decoration: none;
+    }
+  }
+
+  .page:not(.first) {
+    border-left: 2px solid $color-gray;
+  }
+
+  .current {
+    background: none;
+    color: $brand-teal;
+  }
+}
+
+.repos-list {
+  clear: both;
 }
